<resources>
    <string name="app_name">Cycler  </string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="create">Create an account</string>
    <string name="add_picture">Add a profile picture</string>
    <string name="change">Change profile picture</string>
    <string name="logout">Log out</string>
    <string name="apiKey">AIzaSyDbLieeRqQznNitg0tC9f7AhwoudvKS7xk</string>
    <string name="share">Share</string>
    <string name="location">Location</string>
    <string name="camera">Take a picture</string>
    <string name="gallery">Choose from gallery</string>
    <string name="deleteAccount">Delete my account</string>
    <string name="updateChanges">Update Changes</string>
    <string name="changePassword">Change Password</string>
    <string name="curPass">Current password</string>
    <string name="confirmcurPass">Confirm current password</string>
    <string name="newPass">New Password</string>
    <string name="ConfirmnewPass">Confirm New Password</string>
    <string name="Changepic">Change profile picture</string>
    <string name="newusername">New Username</string>
    <string name="contact">Contact seller</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="descriptionfilter">Search Filter: Description</string>
    <string name="pricefilter">Search Filter: Price Less Than</string>
    <string name="condiitonfilter">Search Filter: Condition</string>
    <string name="availabilityfilter">Search Filter: Availability</string>
    <string name="email">Email</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="bikecontiion">Bike Condition</string>
    <string name="price">Price</string>
    <string name="availability">Availability</string>
    <string name="pricedescription">Hourly bike rental price in USD</string>
    <string name="availdescription">Days of the week and times bike is available for rent</string>
    <string name="describe">Describe your bike (Color, targeted age group, items included with bike, etc.)</string>
    <string name="curLocation">Use my current location</string>
    <string name="settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>