<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ComposeFragment">

    <TextView
        android:id="@+id/tvCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp"
        android:text="@string/bikecontiion"
        android:layout_below="@id/ivPostImage"/>

    <Spinner
        android:id="@+id/sConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvCondition"
        android:layout_below="@id/ivPostImage"/>

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCondition"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:text="@string/price" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sConditions"
        android:layout_toRightOf="@id/tvPrice"
        android:ems="10"
        android:hint="@string/pricedescription"
        android:paddingTop="16dp"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tvAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPrice"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp"
        android:text="@string/availability" />

    <EditText
        android:id="@+id/etAvailability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPrice"
        android:layout_toRightOf="@id/tvAvailability"
        android:ems="10"
        android:hint="@string/availdescription" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAvailability"
        android:ems="10"
        android:hint="@string/describe"
        android:lines="4" />


    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ivPostImage"
        android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
        android:text="@string/camera"
        android:textColor="@color/backgroundColor"/>

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCaptureImage"
        android:layout_toRightOf="@id/ivPostImage"
        android:drawableLeft="@drawable/ic_baseline_photo_library_24"
        android:text="@string/gallery"
        android:textColor="@color/backgroundColor" />


    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@tools:sample/avatars"
        android:padding="8dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbLocation"
        android:text="@string/share"
        android:padding="8dp"
        android:textColor="@color/backgroundColor"/>
    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etDescription"
        android:text="@string/location"
        android:padding="8dp"/>
    <fragment
        android:id="@+id/autocomplete_fragment"
        android:layout_toRightOf="@id/tvLocation"
        android:layout_below="@id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Bike Location"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
    <CheckBox
        android:id="@+id/cbLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curLocation"
        android:layout_below="@id/autocomplete_fragment"/>

</RelativeLayout>