<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@tools:sample/avatars"
        android:layout_margin="8dp" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="kanika22"
        android:padding="8dp"
        android:layout_toRightOf="@+id/ivProfilePicture"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:drawableLeft="@drawable/ic_baseline_rotate_right_24"
        android:text="@string/logout"
        android:textColor="@color/backgroundColor"/>


    <EditText
        android:id="@+id/etnewuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_alignBottom="@id/ivProfilePicture"
        android:hint="@string/newusername"
        android:layout_toRightOf="@id/ivProfilePicture"
        tools:text="@string/newusername" />
    <TextView
        android:id="@+id/tvChange"
        android:text="@string/Changepic"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfilePicture"
        android:padding="8dp"/>

    <Button
        android:id="@+id/btncamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChange"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@+id/btngallery"
        android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
        android:padding="8dp"
        android:text="@string/camera"
        android:textColor="@color/backgroundColor"/>

    <Button
        android:id="@+id/btngallery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvChange"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:drawableLeft="@drawable/ic_baseline_photo_library_24"
        android:padding="8dp"
        android:text="@string/gallery"
        android:textColor="@color/backgroundColor"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnupdate"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="#A3FF3939"
        android:drawableLeft="@drawable/ic_baseline_delete_24"
        android:text="@string/deleteAccount"
        android:textColor="@color/backgroundColor"/>

    <Button
        android:id="@+id/btnupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etconfirmnewPass"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableLeft="@drawable/ic_baseline_update_24"
        android:text="@string/updateChanges"
        android:textColor="@color/backgroundColor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChangePassword"
        android:text="@string/changePassword"
        android:textSize="18dp"
        android:layout_below="@id/btncamera"
        android:padding="8dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/curPass"
        android:layout_below="@id/tvChangePassword"
        android:id="@+id/etcurPass"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/confirmcurPass"
        android:layout_below="@id/etcurPass"
        android:id="@+id/etconfirmcurPass"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/newPass"
        android:layout_below="@id/etconfirmcurPass"
        android:id="@+id/etnewPass"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:hint="@string/ConfirmnewPass"
        android:layout_below="@id/etnewPass"
        android:id="@+id/etconfirmnewPass"
        android:inputType="textPassword"/>

</RelativeLayout>