<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".activities.MainActivity">
    <item android:id="@+id/action_search"
        android:orderInCategory="8"
        android:title="Search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/filter_description"
        android:icon="@drawable/ic_baseline_description_24"
        android:orderInCategory="5"
        android:title="@string/descriptionfilter"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/filter_price"
        android:orderInCategory="5"
        android:title="@string/pricefilter"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/filter_condition"
        android:orderInCategory="5"
        android:title="@string/condiitonfilter"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/filter_availability"
        android:orderInCategory="5"
        android:title="@string/availabilityfilter"
        app:showAsAction="collapseActionView" />
</menu>
