<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="8dp"
    tools:context=".activities.SignupActivity"
    android:background="@color/backgroundColor">


    <EditText
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/username"

        android:textColor="@color/textColor"
        android:textColorHint="#A8A8A8"
        android:background="#454545"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/password"
        android:layout_below="@id/tvUsername"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="#A8A8A8"
        android:background="#454545"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/confirmpass"
        android:layout_below="@id/tvPassword"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="#A8A8A8"
        android:background="#454545"
        android:padding="8dp"/>
    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/email"
        android:layout_below="@id/tvConfirm"
        android:textColor="@color/textColor"
        android:textColorHint="#A8A8A8"
        android:background="#454545"
        android:padding="8dp"/>

    <Button
        android:id="@+id/btnPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
        android:text="@string/camera"
        android:textColor="@color/backgroundColor" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnPicture"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_baseline_photo_library_24"
        android:text="@string/gallery"
        android:textColor="@color/backgroundColor" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="250dp"
        android:layout_height="250dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:layout_below="@id/btnGallery"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPreview"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_baseline_directions_bike_24"
        android:text="@string/create"
        android:textColor="@color/backgroundColor" />

</RelativeLayout>