<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="@color/textColor"
        android:textColorHint="#A8A8A8"
        android:background="#454545"
        android:padding="8dp"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="#A8A8A8"
        android:background="#454545"
        android:padding="8dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/login"
        android:padding="8dp"
        android:textColor="@color/backgroundColor"/>
    <EditText
        android:id="@+id/etEmail"
        android:hint="Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="#A8A8A8"
        android:background="#454545"
        android:padding="8dp"/>

    <Button
        android:id="@+id/btnForgot"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/forgot"
        android:textColor="@color/backgroundColor"
        android:padding="8dp"/>

</LinearLayout>